fix: Checkbox styling fix， ContextMenu z-index fix, Row deselection on cell click

--- a/src/components/layout/ContextMenu.module.css
+++ b/src/components/layout/ContextMenu.module.css
@@ -46,12 +46,12 @@
 }
 
 .deleteItem:hover {
-  background-color: #fee2e2;
+  background-color: #0B99FF14;
   color: #AA052C;
 }
 
 .deleteItem:active {
-  background-color: #fecaca;
+  background-color: #0B99FF14;
 }
 
 .separator {
